--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,13 @@
 {
     "version": "0.2.0",
     "configurations": [
-        
+
         {
             "name": "Python Debugger: Python File",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": ["--t"],
+            "args": ["-t","ut_parsefunc_argument_list"],
         }
     ]
 }
