- `helptext` : `generate_md` don't add extra whitespace after last arg flag in a line.

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,4 @@
 /.vs
 gmash.code-workspace
 .vscode/launch.json
-gmash-source/gendocs/__pycache__/helptext_ast.cpython-313.pyc
-gmash-source/gendocs/__pycache__/helptext_common.cpython-313.pyc
-gmash-source/gendocs/__pycache__/helptext_md.cpython-313.pyc
-gmash-source/gendocs/__pycache__/helptext_parser.cpython-313.pyc
-gmash-source/gendocs/__pycache__/helptext_tests.cpython-313.pyc
+gmash-source/gendocs/__pycache__
