+ `docs` : generated new docs using `helptext` + `gendocs.sh` : Add `front matter` markdown header to each generated page so pages appear in the sidebar correctly. + Double checked formatting in all `parser-defs`  conform to helptext notation. + `docs` : use dark theme in `_config.yml` + Fix some .sh scripts which had `CRLF`  line endings to `LF`.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,5 @@
+# Reference:
+# https://just-the-docs.com/docs/configuration/
 title: GMash Documentation
 remote_theme: just-the-docs/just-the-docs
 
@@ -6,3 +8,6 @@ search_enabled: true
 
 # Configure navigation
 nav_order: 1
+
+# Color scheme supports "light" (default) and "dark"
+color_scheme: dark
