- Minor formatting fix in `parser-defs`: title was not being parse correctly due to preceding `[globals...]` option in subcommand's `usage` line. - Regenarated docs.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # Reference:
 # https://just-the-docs.com/docs/configuration/
-title: GMash Documentation
+title: gmash docs
 remote_theme: just-the-docs/just-the-docs
 
 # Configure search
