- `docs` : disable `nav_fold` as the default. - Adjust `nav_order` of pages to not appear before the index in the nav bar.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,6 +8,7 @@ search_enabled: true
 
 # Configure navigation
 nav_order: 1
+nav_fold: false # Whether to fold navigation items by default
 
 # Color scheme supports "light" (default) and "dark"
 color_scheme: dark
